--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Movies App</string>
     <string name="movie_title">Los vengadores</string>
     <string name="movie_vote_average">Voto promedio: %1$s</string>
+    <string name="kids">Infantil</string>
+    <string name="popular">Populares</string>
+    <string name="favorite">Favoritos</string>
 </resources>
