--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="kids">Infantil</string>
     <string name="popular">Populares</string>
     <string name="favorite">Favoritos</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cartelera">Cartelera</string>
+    <string name="proximo">Próximamente</string>
 </resources>
